fix for IE6 @ 1024px wide: ditch the scrollbars for good. (smaller screens are a problem now, but so they were before. TODO: FIX admin layout for lowrez screens)

--- a/admin/img/styles/ie.css
+++ b/admin/img/styles/ie.css
@@ -177,3 +177,15 @@ until we got to 'the edge', which turned out to be a lone <h2> at the top. A-fuc
 }
 
 
+
+
+
+
+/*
+Make sure the outer scrollbars disappear in IE6; they screw up the screen on 1024px wide 
+displays.
+*/
+html
+{
+	overflow: hidden;
+}
